테스트를 위해 트리거 수정
master 주석하고 현재 브렌치

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build and Push Docker image
 on:
   push:
     branches:
-      - master
+#       - master
+      - make_github_action
 
 jobs:
   build:
