make print env and variable
[Ticket: #2]

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,17 @@ jobs:
     name: Build with buildx
     runs-on: ubuntu-latest
     steps:
+      ##
+      - name: print secret
+        run : |
+        echo "os:       ${{ runner.os }}"
+        echo "github.sha:       ${{ github.sha }}"
+        echo "secrets.DOCKERHUB_USERNAME:       ${{ secrets.DOCKERHUB_USERNAME }}"
+        echo "secrets.DOCKERHUB_TOKEN:       ${{ secrets.DOCKERHUB_TOKEN }}"
+        echo "os:       ${{ runner.os }}"
+        echo "os:       ${{ runner.os }}"
+        echo "os:       ${{ runner.os }}"
+
       - name: Checkout source code
         uses: actions/checkout@master
       
@@ -68,8 +79,8 @@ jobs:
           status: ${{ job.status }}
           author_name: GeunChang Ahn
           fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest # selectable (default: repo,message)
-         mention: here
-         if_mention: failure, cancelled
+#          mention: here
+#          if_mention: failure, cancelled
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
