--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,15 +45,19 @@ jobs:
           
       - name: Build and push
         uses: docker/build-push-action@v3
-        env:
-          H2_VERSION: ${{ secrets.H2VERSION }}
-          H2_RELEASEDATE: ${{ secrets.H2RELEASEDATE }}
+        # env:
+          # H2_VERSION: ${{ secrets.H2VERSION }}
+          # H2_RELEASEDATE: ${{ secrets.H2RELEASEDATE }}
         with:
           platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6
           push: true
           tags: rkaehdaos/h2:latest, rkaehdaos/h2:${{ secrets.H2VERSION }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
+          secrets: |
+            "H2_VERSION: ${{ secrets.H2VERSION }}"
+            "H2_RELEASEDATE: ${{ secrets.H2RELEASEDATE }}
+ 
 
       # layer caching
       # github의 repo는 5GB까지만 Cache 보관 가능
