secrets부분을 key:value 대신 =으로

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,8 +55,8 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           secrets: |
-            "H2_VERSION: ${{ secrets.H2VERSION }}"
-            "H2_RELEASEDATE: ${{ secrets.H2RELEASEDATE }}
+            "H2_VERSION=${{ secrets.H2VERSION }}"
+            "H2_RELEASEDATE=${{ secrets.H2RELEASEDATE }}
  
 
       # layer caching
