--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,9 @@ jobs:
           tags: rkaehdaos/h2:latest, rkaehdaos/h2:${{ secrets.H2VERSION }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
-          # secrets: |
-            # "H2_VERSION=${{ secrets.H2VERSION }}"
-            # "H2_RELEASEDATE=${{ secrets.H2RELEASEDATE }}
+          secrets: |
+            H2_VERSION=${{ secrets.H2VERSION }}
+            H2_RELEASEDATE=${{ secrets.H2RELEASEDATE }}
  
 
       # layer caching
