--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           secrets: |
             "H2_VERSION=${{ secrets.H2VERSION }}"
-            "H2_RELEASEDATE=${{ secrets.H2RELEASEDATE }}""
+            "H2_RELEASEDATE=${{ secrets.H2RELEASEDATE }}"
  
 
       # layer caching
