secrets대신 build-arg로 테스트
- ref: https://stackoverflow.com/questions/72871599/use-github-secrets-in-dockerfile-does-not-work-with-github-actions

ticket : #2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,8 @@ jobs:
           tags: rkaehdaos/h2:latest, rkaehdaos/h2:${{ secrets.H2VERSION }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
-          secrets: |
+          # secrets: |
+          build-args: |
             "H2_VERSION=${{ secrets.H2VERSION }}"
             "H2_RELEASEDATE=${{ secrets.H2RELEASEDATE }}"
 
