--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,9 @@ name: Build and Push Docker image
 on:
   push:
     branches:
-      - master
+      - main
+    pull_request:
+      - main
 jobs:
   build:
     name: Build with buildx
